Blurred text bug

--- a/diagonal/styles.css
+++ b/diagonal/styles.css
@@ -96,7 +96,7 @@ div[id^="page-index"]
 div[id^="page-index"]
 .max-width {
   position: absolute;
-  top: 26%;
+  top: 25%;
   left: 45%;
   transform: translate(-50%, -10%);
 }
